<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btnFadeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fade_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_fade_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_in_text"
        app:layout_constraintBottom_toBottomOf="@+id/btnFadeIn"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnFadeIn" />


    <Button
        android:id="@+id/btnFadeOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="16dp"
        android:text="@string/fade_out"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnFadeIn" />

    <TextView
        android:id="@+id/txt_fade_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_out_text"
        
        app:layout_constraintBottom_toBottomOf="@+id/btnFadeOut"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnFadeOut" />

    <Button
        android:id="@+id/btnCrossFade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/cross_fade"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnFadeOut" />

    <TextView
        android:id="@+id/txt_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cross_fade_in"

        app:layout_constraintBottom_toBottomOf="@+id/btnCrossFade"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnCrossFade" />

    <TextView
        android:id="@+id/txt_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cross_fade_out"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnCrossFade"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnCrossFade"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnBlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/blink"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnCrossFade" />

    <TextView
        android:id="@+id/txt_blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blink_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnBlink"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnBlink" />

    <Button
        android:id="@+id/btnZoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/zoom_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnBlink" />

    <TextView
        android:id="@+id/txt_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_in_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnZoomIn"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnZoomIn" />

    <Button
        android:id="@+id/btnZoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/zoom_out"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnZoomIn" />

    <TextView
        android:id="@+id/txt_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_out_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnZoomOut"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnZoomOut" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/rotate"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnZoomOut" />

    <TextView
        android:id="@+id/txt_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnRotate"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnRotate" />

    <Button
        android:id="@+id/btnMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/move"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnRotate" />

    <TextView
        android:id="@+id/txt_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnMove"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnMove" />

    <Button
        android:id="@+id/btnSlideUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/slide_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnMove" />

    <TextView
        android:id="@+id/txt_slide_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_up_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnSlideUp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnSlideUp" />

    <Button
        android:id="@+id/btnSlideDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/slide_down"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSlideUp" />

    <TextView
        android:id="@+id/txt_slide_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_down_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnSlideDown"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnSlideDown" />

    <Button
        android:id="@+id/btnBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/bounce"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSlideDown" />

    <TextView
        android:id="@+id/txt_bounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bounce_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnBounce"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnBounce" />

    <Button
        android:id="@+id/btnSequential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sequential_animation"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnBounce" />

    <TextView
        android:id="@+id/txt_seq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sequential_animation_text"

        app:layout_constraintBottom_toBottomOf="@+id/btnSequential"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnSequential" />

    <Button
        android:id="@+id/btnTogether"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/together_animation"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSequential" />

    <TextView
        android:id="@+id/txt_tog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/together_animation_text"
        
        app:layout_constraintBottom_toBottomOf="@+id/btnTogether"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btnTogether" />

</androidx.constraintlayout.widget.ConstraintLayout>
